--- a/.github/workflows/tests_accounts.yml
+++ b/.github/workflows/tests_accounts.yml
@@ -1,36 +1,34 @@
 name: Test Trojan Accounts
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [main]
   schedule:
-    - cron: '0 0 */3 * *' # setiap 3 hari
+    - cron: "0 0 * * *" # setiap hari jam 00:00 UTC
 
 jobs:
-  test_accounts:
+  test-accounts:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Setup Trojan-Go
-        run: |
-          curl -L https://github.com/p4gefau1t/trojan-go/releases/latest/download/trojan-go-linux-amd64.zip -o trojan-go.zip
-          unzip trojan-go.zip
-          chmod +x trojan-go
-          mv trojan-go /usr/local/bin/
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
 
-      - name: Install Python
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
+    - name: Install requests
+      run: pip install requests
 
-      - name: Run tester
-        run: python tester.py
+    - name: Run Trojan test
+      run: python tester.py
 
-      - name: Commit results
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add results.txt
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update active accounts"
-          git push
+    - name: Commit results
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add active.txt dead.txt
+        git commit -m "Update test results" || echo "No changes"
+        git push
