--- a/.github/workflows/tests_accounts.yml
+++ b/.github/workflows/tests_accounts.yml
@@ -1,34 +1,33 @@
-name: Test Trojan Accounts
+name: Check Trojan VPN Accounts
 
 on:
-  push:
-    branches: [main]
   schedule:
-    - cron: "0 0 * * *" # setiap hari jam 00:00 UTC
+    - cron: "0 */6 * * *"   # setiap 6 jam
+  workflow_dispatch:         # bisa dijalankan manual
 
 jobs:
-  test-accounts:
+  check:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
 
-    - name: Install requests
-      run: pip install requests
+      - name: Install dependencies
+        run: pip install requests websocket-client
 
-    - name: Run Trojan test
-      run: python tester.py
+      - name: Run Trojan account checker
+        run: python scripts/check_trojan.py
 
-    - name: Commit results
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add active.txt dead.txt
-        git commit -m "Update test results" || echo "No changes"
-        git push
+      - name: Commit results
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add results/active_accounts.txt
+          git commit -m "Update active Trojan accounts [skip ci]" || echo "No changes"
+          git push
