--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -1,9 +1,9 @@
-name: Trojan Check
+name: Trojan Check V2Ray
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"  # jalan otomatis tiap 6 jam
+    - cron: "0 */6 * * *"
 
 jobs:
   check:
@@ -12,24 +12,21 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
+      - name: Install V2Ray CLI
         run: |
-          python -m pip install --upgrade pip
-          pip install requests websocket-client
+          curl -L https://github.com/v2fly/v2ray-core/releases/latest/download/v2ray-linux-64.zip -o v2ray.zip
+          unzip v2ray.zip -d v2ray
+          chmod +x v2ray/v2ray
 
-      - name: Run Trojan Checker
+      - name: Run Trojan Check
         run: |
-          python check_trojan_sort.py
+          mkdir -p results
+          python3 scripts/check_trojan_v2ray.py
 
       - name: Commit results
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add results/sni.txt
-          git commit -m "Update hasil cek Trojan TLS aktif" || echo "No changes to commit"
+          git commit -m "Update hasil cek Trojan TLS aktif via V2Ray" || echo "No changes"
           git push
