--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -12,21 +12,20 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install V2Ray CLI
+      - name: Install dependencies
         run: |
-          curl -L https://github.com/v2fly/v2ray-core/releases/latest/download/v2ray-linux-64.zip -o v2ray.zip
-          unzip v2ray.zip -d v2ray
-          chmod +x v2ray/v2ray
+          python3 -m pip install --upgrade pip
+          pip install requests websocket-client
 
-      - name: Run Trojan Check
+      - name: Run Trojan Checker
         run: |
           mkdir -p results
-          python3 check_trojan_v2ray.py
+          python3 check_trojan_runner.py
 
       - name: Commit results
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add results/sni.txt
-          git commit -m "Update hasil cek Trojan TLS aktif via V2Ray" || echo "No changes"
+          git add results/sni.txt results/log.txt
+          git commit -m "Update hasil cek Trojan TLS/WS sederhana" || echo "No changes"
           git push
