--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -1,31 +1,32 @@
-name: Sort WS Trojan Accounts
+name: Sort Trojan WS
 
+# Bisa dijalankan manual via "Run workflow"
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 */6 * * *"
 
 jobs:
-  sort_ws:
+  sort-trojan:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          pip install requests
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.11"
 
-      - name: Jalankan sort WS accounts
-        run: |
-          mkdir -p results
-          python3 check_trojan_runner.py
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
 
-      - name: Commit hasil sortir
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add results/sorted.txt
-          git commit -m "Update hasil sortir akun WS" || echo "No changes"
-          git push
+    - name: Run Trojan WS Sorter
+      run: |
+        python check_trojan_runner.py
+
+    - name: Upload output.txt as artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: trojan-output
+        path: output.txt
