--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -1,16 +1,15 @@
 name: Sort Trojan WS
 
-# Bisa dijalankan manual via "Run workflow"
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Bisa dijalankan manual
 
 jobs:
   sort-trojan:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v5
 
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -21,12 +20,21 @@ jobs:
       run: |
         python -m pip install --upgrade pip
 
+    - name: Verify input.txt exists
+      run: |
+        echo "Daftar file di repo:"
+        ls -la
+        if [ ! -f input.txt ]; then
+          echo "ERROR: input.txt tidak ditemukan!"
+          exit 1
+        fi
+
     - name: Run Trojan WS Sorter
       run: |
         python check_trojan_runner.py
 
     - name: Upload output.txt as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: trojan-output
         path: output.txt
