--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -19,10 +19,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install requests
 
     - name: Verify input.txt exists
       run: |
-        echo "Daftar file di repo:"
         ls -la
         if [ ! -f input.txt ]; then
           echo "ERROR: input.txt tidak ditemukan!"
