--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -1,49 +1,50 @@
-name: Check Trojan Accounts
+name: Sort & Test Trojan Accounts
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: "0 */6 * * *"   # jalan tiap 6 jam
+  workflow_dispatch: {}
+  push:
+    branches: [ main ]
 
 jobs:
-  check:
+  sort:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
 
       - name: Install Python deps
-        run: |
-          pip install requests
+        run: python -m pip install requests
 
       - name: Install Ookla Speedtest CLI
         run: |
-          if [ ! -f ./speedtest ]; then
+          if [ ! -x ./speedtest ]; then
             echo "⚡ Installing Ookla Speedtest CLI..."
             curl -L -o speedtest.tgz https://install.speedtest.net/app/cli/ookla-speedtest-1.2.0-linux-x86_64.tgz
             tar -xvzf speedtest.tgz
-            mv speedtest ./speedtest
-            chmod +x ./speedtest
+            chmod +x speedtest
           else
             echo "✅ Speedtest CLI already installed, skipping..."
           fi
 
-      - name: Run Trojan checker
+      - name: Run trojan sorter + speedtest
         run: |
-          python check_trojan_runner.py \
-            --input accounts.txt \
-            --sorted sorted.txt \
-            --active active.txt \
-            --speedtest ./speedtest
+          python check_trojan_runner.py --input input.txt --output sorted.txt --active active.txt --require-sni-host --only-ws
+          ./speedtest --accept-license --accept-gdpr -f json-pretty >> active.txt
 
-      - name: Commit & push results
+      - name: Commit results
         uses: EndBug/add-and-commit@v9
         with:
-          add: "*.txt"
+          author_name: github-actions[bot]
+          author_email: 41898282+github-actions[bot]@users.noreply.github.com
           message: "update: sorted & active Trojan accounts"
-          default_author: github_actions
+          add: |
+            sorted.txt
+            active.txt
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
