--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -18,20 +18,13 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install requests
-        run: python -m pip install --upgrade pip && pip install requests
-
-      - name: Download Ookla Speedtest CLI
+      - name: Install Python dependencies
         run: |
-          if [ ! -f ./speedtest ]; then
-            curl -sL https://install.speedtest.net/app/cli/ookla-speedtest-1.2.0-linux-x86_64.tgz -o speedtest.tgz
-            tar xzf speedtest.tgz
-            chmod +x speedtest
-          fi
+          python -m pip install --upgrade pip
+          pip install requests speedtest-cli
 
-      - name: Run Trojan sorter & speedtest
-        run: |
-          python check_trojan_runner.py --input input.txt --sorted sorted.txt --delay 10 || true
+      - name: Run Trojan sorter & test browsing
+        run: python check_trojan_runner.py --input input.txt --sorted sorted.txt --delay 3 || true
 
       - name: Debug file contents
         run: |
@@ -40,7 +33,7 @@ jobs:
           echo "=== active.txt ==="
           cat active.txt
 
-      - name: Commit results (force push)
+      - name: Commit results
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
