--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -18,20 +18,15 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Python dependencies
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install requests speedtest-cli
+          pip install --quiet requests speedtest-cli
 
       - name: Run Trojan sorter & test browsing
         run: python check_trojan_runner.py --input input.txt --sorted sorted.txt --delay 3 || true
-
-      - name: Debug file contents
-        run: |
-          echo "=== sorted.txt ==="
-          cat sorted.txt
-          echo "=== active.txt ==="
-          cat active.txt
 
       - name: Commit results
         run: |
