--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -1,11 +1,11 @@
 name: Sort & Check Trojan WS
 
 on:
-  workflow_dispatch: {}        # manual trigger
+  workflow_dispatch: {}
   push:
     branches: [ main ]
   schedule:
-    - cron: "0 0 */3 * *"     # setiap 3 hari pukul 00:00 UTC
+    - cron: "0 0 */3 * *"  # setiap 3 hari pukul 00:00 UTC
 
 jobs:
   sort_ws:
