--- a/.github/workflows/soet_trojan.yml
+++ b/.github/workflows/soet_trojan.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: "0 0 */3 * *"  # setiap 3 hari pukul 00:00 UTC
+    - cron: "0 0 * * *"  # setiap 3 hari pukul 00:00 UTC
 
 jobs:
   sort_ws:
